# pos

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
backend/: .env.test  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260506_001001_identity_tables.py  20260506_001002_catalog_tables.py  20260506_001003_people_tables.py  20260506_001004_operations_tables.py  20260506_001005_extras_tables.py  20260507_001006_ticket_settings.py
backend/app/: config.py  database.py  limiter.py  main.py
backend/app/jobs/: banxico_job.py
backend/app/models/: __init__.py  audit_log.py  business_settings.py  cashier_session.py  category.py  customer.py  exchange_rate.py  gift_card.py  loyalty_account.py  product.py  purchase.py  return_.py  sale.py  stock_movement.py  supplier.py  user.py
backend/app/routers/: auth.py  catalog.py  customers.py  extras.py  purchases.py  reports.py  sales.py  settings.py  suppliers.py  users.py
backend/app/schemas/: __init__.py  business_settings.py  catalog.py  extras.py  operations.py  people.py  product.py  purchases.py  user.py
backend/app/security/: __init__.py  dependencies.py  jwt.py  password.py
backend/app/services/: cashier_session_service.py  catalog_service.py  fx_service.py  gift_card_service.py  pdf_service.py  purchase_service.py  receipt_service.py  report_service.py  return_service.py  sale_service.py  settings_service.py  user_service.py  xlsx_service.py
backend/tests/: test_health.py
caddy/: Caddyfile
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
print-bridge/: README.md  build.sh  main.py  pyproject.toml
(+141 files in other folders)
