[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pos-print-bridge"
version = "2026.05.06.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-escpos>=3.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]
